--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "bcrypt": "^5.1.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
+    "formik": "^2.4.2",
     "next": "13.4.8",
     "passport-local": "^1.0.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "prisma": "^4.16.2"
