--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "formik": "^2.4.2",
+    "jose": "^4.14.4",
     "jsonwebtoken": "^9.0.1",
     "next": "13.4.8",
     "passport-local": "^1.0.0",
@@ -30,4 +31,5 @@
   "devDependencies": {
     "prisma": "^4.16.2"
   }
+
 }
