--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@prisma/client": "^4.16.2",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
-    "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "formik": "^2.4.2",
     "jose": "^4.14.4",
@@ -29,7 +28,8 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "eslint": "^8.45.0",
+    "eslint-plugin-react": "^7.32.2",
     "prisma": "^4.16.2"
   }
-
 }
