--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.6",
     "@prisma/client": "^4.16.2",
+    "@vercel/postgres": "^0.4.0",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
     "eslint-config-next": "13.4.8",
