--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.6",
     "@prisma/client": "^4.16.2",
+    "@reduxjs/toolkit": "^1.9.5",
     "@vercel/postgres": "^0.4.0",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
@@ -26,6 +27,7 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.1.1",
     "tailwindcss": "3.3.2",
     "yup": "^1.2.0"
   },
