--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vercel/postgres": "^0.4.0",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
+    "cookie": "^0.5.0",
     "eslint-config-next": "13.4.8",
     "formik": "^2.4.2",
     "jose": "^4.14.4",
