--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@alloc/quick-lru": "^5.2.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.6",
     "@prisma/client": "^4.16.2",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
@@ -29,7 +31,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/node": "20.4.4",
     "prisma": "^4.16.2"
   }
-
 }
