--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.6",
+    "@mui/styles": "^5.14.1",
     "@prisma/client": "^4.16.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@vercel/postgres": "^0.4.0",
