--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.13.6",
     "@prisma/client": "^4.16.2",
     "@reduxjs/toolkit": "^1.9.5",
@@ -22,6 +23,7 @@
     "formik": "^2.4.2",
     "jose": "^4.14.4",
     "jsonwebtoken": "^9.0.1",
+    "material-icons": "^1.13.9",
     "next": "13.4.8",
     "passport-local": "^1.0.0",
     "postcss": "8.4.24",
