--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "13.4.8",
     "passport-local": "^1.0.0",
     "postcss": "8.4.24",
+    "prettier": "^2.5.1",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -35,7 +36,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
-    "eslint": "^8.2.0",
+    "eslint": "^8.7.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
