Ya crea clientes en la cb

--- a/.env
+++ b/.env
@@ -1,17 +1,16 @@
 # Created by Vercel CLI
-JWT_SECRET_KEY="7894561230"
+JWT_SECRET_KEY="12345678"
 NX_DAEMON=""
-POSTGRES_DATABASE="prisma_migrate_shadow_db_0ce7fed6-e816-42d3-8406-48e8c26eac74"
-POSTGRES_HOST="ep-winter-cherry-13898685-pooler.us-east-1.postgres.vercel-storage.com"
-POSTGRES_PASSWORD="0TiOcYP9Kdua"
-POSTGRES_PRISMA_URL="postgres://default:0TiOcYP9Kdua@ep-winter-cherry-13898685-pooler.us-east-1.postgres.vercel-storage.com/prisma_migrate_shadow_db_0ce7fed6-e816-42d3-8406-48e8c26eac74?pgbouncer=true&connect_timeout=15"
-POSTGRES_URL="postgres://default:0TiOcYP9Kdua@ep-winter-cherry-13898685-pooler.us-east-1.postgres.vercel-storage.com/prisma_migrate_shadow_db_0ce7fed6-e816-42d3-8406-48e8c26eac74"
-POSTGRES_URL_NON_POOLING="postgres://default:0TiOcYP9Kdua@ep-winter-cherry-13898685.us-east-1.postgres.vercel-storage.com/prisma_migrate_shadow_db_0ce7fed6-e816-42d3-8406-48e8c26eac74"
+POSTGRES_DATABASE="verceldb"
+POSTGRES_HOST="ep-long-glitter-16101931-pooler.us-east-1.postgres.vercel-storage.com"
+POSTGRES_PASSWORD="IwGelQ3Z7xmX"
+POSTGRES_PRISMA_URL="postgres://default:IwGelQ3Z7xmX@ep-long-glitter-16101931-pooler.us-east-1.postgres.vercel-storage.com/verceldb?pgbouncer=true&connect_timeout=15"
+POSTGRES_URL="postgres://default:IwGelQ3Z7xmX@ep-long-glitter-16101931-pooler.us-east-1.postgres.vercel-storage.com/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:IwGelQ3Z7xmX@ep-long-glitter-16101931.us-east-1.postgres.vercel-storage.com/verceldb"
 POSTGRES_USER="default"
 TURBO_REMOTE_ONLY=""
 TURBO_RUN_SUMMARY=""
 VERCEL="1"
-VERCEL_ANALYTICS_ID="yrDpCfYeQRbGgfmEGmm6pGGzrNq"
 VERCEL_ENV="development"
 VERCEL_GIT_COMMIT_AUTHOR_LOGIN=""
 VERCEL_GIT_COMMIT_AUTHOR_NAME=""
@@ -25,4 +24,3 @@ VERCEL_GIT_REPO_ID=""
 VERCEL_GIT_REPO_OWNER=""
 VERCEL_GIT_REPO_SLUG=""
 VERCEL_URL=""
-VERCEL_WEB_ANALYTICS_ID="usacVoq00xhbaOSj8KvMMBYmj"
