--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 # testing
 /coverage
 
+# scriptsDB
+/scriptsDB
+
 # next.js
 /.next/
 /out/
@@ -29,6 +32,7 @@ yarn-error.log*
 
 # vercel
 .vercel
+
 
 # typescript
 *.tsbuildinfo
