--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
-    "@mui/material": "^5.14.3",
     "@mui/lab": "^5.0.0-alpha.138",
+    "@mui/material": "^5.14.3",
     "@prisma/client": "^4.16.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@vercel/postgres": "^0.4.1",
@@ -33,6 +33,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.1",
+    "server-only": "^0.0.1",
     "tailwindcss": "3.3.2",
     "yup": "^1.2.0"
   },
