--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
   "extends": ["next/core-web-vitals","airbnb"],
   "rules":{
-    "linebreak-style": 0
+    "linebreak-style": 0,
+    "react/require-default-props": 0
   },
   "env": {"es2020":true}
 }
